[gd_scene load_steps=6 format=3 uid="uid://ccy8j8kdny6ic"]

[ext_resource type="Script" path="res://ui/base_status/base_status.gd" id="1_b5fnb"]
[ext_resource type="Texture2D" uid="uid://50ya6aijpt4d" path="res://ui/icons.png" id="1_twc2b"]
[ext_resource type="PackedScene" uid="uid://gwawuslf3jr8" path="res://ui/health.tscn" id="2_8w8pf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ah0kc"]
atlas = ExtResource("1_twc2b")
region = Rect2(103, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lid6"]
atlas = ExtResource("1_twc2b")
region = Rect2(153, 0, 44, 44)

[node name="BaseStatus" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b5fnb")

[node name="Name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 27.0
offset_right = 63.0
offset_bottom = 53.0
theme_override_font_sizes/normal_font_size = 0
text = "Humans"

[node name="InputDevice" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_top = 500.0
offset_right = 63.0
offset_bottom = 526.0
theme_override_font_sizes/normal_font_size = 12
text = "Keyboard + Mouse"

[node name="HumansIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 46.0
offset_right = 62.0
offset_bottom = 109.0
texture = SubResource("AtlasTexture_ah0kc")
stretch_mode = 4

[node name="OrcsIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_top = 46.0
offset_right = 62.0
offset_bottom = 109.0
texture = SubResource("AtlasTexture_4lid6")
stretch_mode = 4

[node name="Health" parent="." instance=ExtResource("2_8w8pf")]
offset_top = 110.0
offset_right = 0.0
offset_bottom = 110.0
scale = Vector2(0.125, 0.125)
